feat: add payment account function
