# docs/swagger.json
@@ -17,6 +17,71 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/accounts": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get all user's account using token from the authorization header",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Account Manager"
+                ],
+                "summary": "Get all user's account",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Response"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Create a new account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Account Manager"
+                ],
+                "summary": "Create a new account",
+                "parameters": [
+                    {
+                        "description": "Create Account Request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateAccountRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "description": "Login a user",
@@ -92,7 +157,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Get user data",
+                "description": "Get user data using token from the authorization header",
                 "consumes": [
                     "application/json"
                 ],
@@ -100,32 +165,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "Account Manager"
                 ],
                 "summary": "Get user data",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dto.Response"
-                        }
-                    }
-                }
-            }
-        },
-        "/users/all": {
-            "get": {
-                "description": "Get all user data",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User"
-                ],
-                "summary": "Get all user data",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -138,6 +180,20 @@
         }
     },
     "definitions": {
+        "dto.CreateAccountRequest": {
+            "type": "object",
+            "properties": {
+                "account_number": {
+                    "type": "string"
+                },
+                "balance": {
+                    "type": "integer"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.LoginRequest": {
             "type": "object",
             "required": [
@@ -158,8 +214,7 @@
             "type": "object",
             "required": [
                 "email",
-                "password",
-                "username"
+                "password"
             ],
             "properties": {
                 "email": {
@@ -168,9 +223,6 @@
                 "password": {
                     "type": "string",
                     "minLength": 5
-                },
-                "username": {
-                    "type": "string"
                 }
             }
         },
