# dto/account.go
@@ -1,0 +1,7 @@
+package dto
+
+type CreateAccountRequest struct {
+	AccountNumber string `json:"account_number"`
+	Type          string `json:"type"`
+	Balance       int    `json:"balance"`
+}
