# dto/auth.go
@@ -1,7 +1,6 @@
 package dto
 
 type RegisterRequest struct {
-	Username string `json:"username" validate:"required"`
 	Email    string `json:"email" validate:"required,email"`
 	Password string `json:"password" validate:"required,min=5"`
 }
