# dto/user.go
@@ -1,10 +1,11 @@
 package dto
 
-import "time"
+import (
+	"time"
+)
 
 type UserDataResponse struct {
 	ID        string    `json:"id"`
-	Username  string    `json:"username"`
 	Email     string    `json:"email"`
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
