# internal/modules/account-manager/api.go
@@ -1,4 +1,4 @@
-package user
+package accountmanager
 
 import (
 	"be-assignment/domain"
@@ -10,25 +10,26 @@ import (
 )
 
 type route struct {
-	userService domain.UserService
+	accountManagerService domain.AccountManagerService
 }
 
-func NewRoute(app *gin.Engine, userService domain.UserService) {
+func NewRoute(app *gin.Engine, accountManagerService domain.AccountManagerService) {
 	route := route{
-		userService,
+		accountManagerService,
 	}
 
 	v1Public := app.Group("/api/v1")
 	{
 		v1Public.POST("/register", route.Register)
 		v1Public.POST("/login", route.Login)
-		v1Public.GET("/users/all", route.GetAllUser)
 	}
 
 	v1Private := app.Group("/api/v1")
 	v1Private.Use(middleware.Authenticate())
 	{
 		v1Private.GET("/users", route.GetUser)
+		v1Private.GET("/accounts", route.GetAllAccount)
+		v1Private.POST("/accounts", route.CreateAccount)
 	}
 }
 
@@ -60,7 +61,7 @@ func (r *route) Register(c *gin.Context) {
 		return
 	}
 
-	if err := r.userService.Register(userReq); err != nil {
+	if err := r.accountManagerService.Register(userReq); err != nil {
 		if err == domain.ErrUserAlreadyExists {
 			c.JSON(400, &dto.Response{
 				Message: err.Error(),
@@ -113,7 +114,7 @@ func (r *route) Login(c *gin.Context) {
 		return
 	}
 
-	loginResponse, err := r.userService.Login(userReq)
+	loginResponse, err := r.accountManagerService.Login(userReq)
 	if err != nil {
 		if err == domain.ErrUserNotFound || err == domain.ErrInvalidPassword {
 			c.JSON(400, &dto.Response{
@@ -141,14 +142,14 @@ func (r *route) Login(c *gin.Context) {
 
 // @Summary Get user data
 // @Description Get user data using token from the authorization header
-// @Tags User
+// @Tags Account Manager
 // @Accept json
 // @Produce json
 // @Security BearerAuth
 // @Success 200 {object} dto.Response
 // @Router /users [get]
 func (r *route) GetUser(c *gin.Context) {
-	user, err := r.userService.GetUser(c)
+	user, err := r.accountManagerService.GetUser(c)
 	if err != nil {
 		c.JSON(500, &dto.Response{
 			Message: err.Error(),
@@ -162,7 +163,6 @@ func (r *route) GetUser(c *gin.Context) {
 		Message: "Success",
 		Data: &dto.UserDataResponse{
 			ID:        user.ID,
-			Username:  user.Username,
 			Email:     user.Email,
 			CreatedAt: user.CreatedAt,
 			UpdatedAt: user.UpdatedAt,
@@ -171,15 +171,16 @@ func (r *route) GetUser(c *gin.Context) {
 	})
 }
 
-// @Summary Get all user data
-// @Description Get all user data
-// @Tags User
+// @Summary Get all user's account and user's transactions per account
+// @Description Get all user's account using token from the authorization header and transactions per account
+// @Tags Account Manager
 // @Accept json
 // @Produce json
+// @Security BearerAuth
 // @Success 200 {object} dto.Response
-// @Router /users/all [get]
-func (r *route) GetAllUser(c *gin.Context) {
-	users, err := r.userService.GetAllUsers()
+// @Router /accounts [get]
+func (r *route) GetAllAccount(c *gin.Context) {
+	accounts, err := r.accountManagerService.GetAllAccount(c)
 	if err != nil {
 		c.JSON(500, &dto.Response{
 			Message: err.Error(),
@@ -189,20 +190,63 @@ func (r *route) GetAllUser(c *gin.Context) {
 		return
 	}
 
-	var userDataResponse []dto.UserDataResponse
-	for _, user := range users {
-		userDataResponse = append(userDataResponse, dto.UserDataResponse{
-			ID:        user.ID,
-			Username:  user.Username,
-			Email:     user.Email,
-			CreatedAt: user.CreatedAt,
-			UpdatedAt: user.UpdatedAt,
+	c.JSON(200, &dto.Response{
+		Message: "Success",
+		Data:    accounts,
+		Status:  200,
+	})
+}
+
+// @Summary Create a new account
+// @Description Create a new account
+// @Tags Account Manager
+// @Accept json
+// @Produce json
+// @Param body body dto.CreateAccountRequest true "Create Account Request"
+// @Security BearerAuth
+// @Success 200 {object} dto.Response
+// @Router /accounts [post]
+func (r *route) CreateAccount(c *gin.Context) {
+	var accountReq dto.CreateAccountRequest
+	if err := c.ShouldBindJSON(&accountReq); err != nil {
+		c.JSON(400, &dto.Response{
+			Message: err.Error(),
+			Data:    []string{},
+			Status:  400,
 		})
+		return
+	}
+
+	if err := validator.New().Struct(accountReq); err != nil {
+		c.JSON(400, &dto.Response{
+			Message: err.Error(),
+			Data:    []string{},
+			Status:  400,
+		})
+		return
+	}
+
+	if err := r.accountManagerService.CreateAccount(c, accountReq); err != nil {
+		if err == domain.ErrAccountAlreadyExists {
+			c.JSON(400, &dto.Response{
+				Message: err.Error(),
+				Data:    []string{},
+				Status:  400,
+			})
+			return
+		}
+
+		c.JSON(500, &dto.Response{
+			Message: err.Error(),
+			Data:    []string{},
+			Status:  500,
+		})
+		return
 	}
 
 	c.JSON(200, &dto.Response{
 		Message: "Success",
-		Data:    userDataResponse,
+		Data:    []string{},
 		Status:  200,
 	})
 }
